@@ -1,3 +1,6 @@
+2021-10-23 Markus Gans  <guru.mail@muenster.de>
+	* Virtual windows now know their own window level
+
 2021-10-22 Markus Gans  <guru.mail@muenster.de>
 	* Change FObjectList from std::list to std::vector
 
